# rust-web

./: Cargo.toml  log4rs.yaml  readme.md
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
scripts/: db.sh  rest.sh
sql/: questions.sql
src/: main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
