[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0" , features = ["full"]}
warp = "0.3.6"
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4"] }
handle-errors = { version = "0.1.0", path = "handle-errors" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
